# AnkiKindleCompanion

./: pyproject.toml
anki_kindle_companion/: __init__.py  anki_kindle_companion.py  enums.py  kindle.py
anki_kindle_companion/gui/: model.py  table.py  window.py
kindle_anki_companion/: kindle_anki_completion.py
